Add basic popup.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,15 +12,13 @@
     "icons": {
         "128": "assets/img/128x128.png"
     },
-    "background": {
-        "service_worker": "background.js"
-    },
     "action": {
         "default_icon": {
             "16": "assets/img/16x16.png",
             "24": "assets/img/24x24.png",
             "32": "assets/img/32x32.png"
         },
-        "default_title": "__MSG_appName__"
+        "default_title": "__MSG_appName__",
+        "default_popup": "popup.html"
     }
 }
